chore(scaffold, shared): move to packages workspace

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "jari": "pnpm --filter jari",
     "scaffold": "pnpm --filter scaffold",
+    "shared": "pnpm --filter shared",
     "lint": "pnpm --filter ./apps/* lint"
   },
-  "workspaces": ["apps/*", "shared/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "license": "ISC"
 }
