--- a/packages/apps/scaffold/package.json
+++ b/packages/apps/scaffold/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jari",
+  "name": "@yeaaaah/scaffold",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@yeaaaah/shared": "workspace:^",
+    "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.7"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7"
+    "eslint-config-next": "14.2.7",
+    "typescript": "^5"
   }
 }
