--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "shared",
+  "name": "@yeaaaah/shared",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -24,6 +25,8 @@
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-dts": "^4.2.2",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
