--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -5,8 +5,9 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "baseUrl": "./",
     "paths": {
-      "@shared/*": ["./src/*"]
+      "shared/*": ["src/*"]
     }
   }
 }
