--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.4",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@yeaaaah/shared": "workspace:^",
     "next": "12",
     "react": "^18.3.1",
