--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,6 +14,7 @@
     "@emotion/css": "^11.13.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fingerprintjs/fingerprintjs": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
