--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "peerDependencies": {
+    "next": "12"
+  },
   "dependencies": {
     "@emotion/css": "^11.13.4",
     "@emotion/react": "^11.13.3",
