--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -15,7 +15,8 @@
     "@yeaaaah/shared": "workspace:^",
     "next": "12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@types/node": "^20",
