--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "jari": "pnpm --filter jari",
     "scaffold": "pnpm --filter scaffold",
     "shared": "pnpm --filter shared",
-    "lint": "pnpm --filter ./apps/* lint"
+    "lint": "pnpm --filter ./packages/* lint"
   },
   "engines": {
     "node": ">=16.14.2",
@@ -15,10 +15,22 @@
   },
   "packageManager": "pnpm@7.9.0",
   "devDependencies": {
-      "pnpm": "^7.9.0"
+    "pnpm": "^7.9.0"
   },
   "workspaces": [
     "packages/*"
   ],
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "prettier": "^3.3.3"
+  }
 }
