--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --ext .js,.ts,.tsx ./src"
   },
   "dependencies": {
     "@emotion/css": "^11.13.4",
