--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@yeaaaah/shared": "workspace:^",
+    "es-toolkit": "^1.25.2",
     "next": "12.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
