--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -15,6 +15,7 @@
     "@yeaaaah/shared": "workspace:^",
     "es-toolkit": "^1.25.2",
     "next": "12.3.4",
+    "overlay-kit": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0"
