--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fingerprintjs/fingerprintjs": "^4.5.0",
+    "@toss/impression-area": "^1.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
