--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
