--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "dotenv -e ../../.env -- next dev",
+    "build": "dotenv -e ../../.env -- next build",
     "start": "next start",
     "lint": "eslint --ext .js,.ts,.tsx ./src"
   },
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "12",
     "next-transpile-modules": "^10.0.1",
