--- a/packages/naerim/package.json
+++ b/packages/naerim/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naerim",
+  "name": "@yeaaaah/naerim",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@pandacss/dev": "^0.53.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
