--- a/packages/naerim/package.json
+++ b/packages/naerim/package.json
@@ -19,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lazy-images": "^1.1.0",
-    "react-notion": "^0.10.0"
+    "react-notion": "^0.10.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
