--- a/packages/naerim/package.json
+++ b/packages/naerim/package.json
@@ -19,8 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lazy-images": "^1.1.0",
-    "react-notion": "^0.10.0",
-    "url-loader": "^4.1.1"
+    "react-notion": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +31,7 @@
     "babel-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url-loader": "^4.1.1"
   }
 }
