--- a/packages/naerim/package.json
+++ b/packages/naerim/package.json
@@ -33,5 +33,6 @@
     "eslint-config-next": "15.1.6",
     "typescript": "^5",
     "url-loader": "^4.1.1"
-  }
+  },
+  "packageManager": "pnpm@9.12.3"
 }
